--- a/resources/assets/less/bem/forum-topics.less
+++ b/resources/assets/less/bem/forum-topics.less
@@ -19,6 +19,10 @@
 .forum-topics {
   @_top: forum-topics;
 
+  &--new-topic {
+    margin: 30px 40px;
+  }
+
   &--subforums {
     margin: 0 20px;
   }
@@ -26,10 +30,6 @@
   &__entries {
     margin: 0 0 10px;
     padding: 0;
-  }
-
-  &__new-topic {
-    margin: 30px 40px;
   }
 
   &__title {
